2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-03-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Merge bibtex8/ and bibtexu/ into bibtex-x (extended).
	* bibtex-[234].c, bibtex.[ch], gblprocs.h, gblvars.h, utils.c:
	Use '#ifndef UTF_8 <bibtex8 code> #ekse <bibtexu code> #endif'.
	* version.h: Set date to '18 mar 2013'.
	Makefile.am, configure.ac: Adapted.

2013-03-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	BibTeX8
	* bibtex-2.c: Use char_less_than and char_greater_than macros.

	BibTeXu
	* bibtex-[24].c, bibtex.h: Define and use DO_UTF8 to handle
	1-, 2-, 3-, and 4-byte UTF-8 codes.
	* tests/bibtex.test (removed): Renamed ...
	* tests/bibtexu.test (new): ... into this.

2013-03-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	BibTeXu
	Reduce diffs with bibtex8.
	* bibtex-[1-4].c, bibtex.[ch], gblprocs.h, gblvars.h,
	utils.[ch]: Drop unused code and adjust white space,
	#include "unicode/*.h" only through gblprocs.h.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (btdocdir): Change texmf => texmf-dist.

2012-12-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	BibTeXu
	* bibtex-2.c: Drop unused variable (gcc-4.6 warning).

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-10-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c (c8read_csf): DEFAULT_BIBTEX_CSFILE is set to
	"/nonesuch" in ../kpathsea/paths.h; so we use CSF_FILE_ENVVAR.

2012-08-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	BibTeXu
	* bibtex.c : Change order of inclusion of headers to avoid warnings.

2012-04-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bibtex-2.c: Do not check whether Glob_Str_Size > Buf_Size,
	and Ent_Str_size > Buf_Size, since Buf_Size can be changed
	dynamically, whereas Glob_Str_Size and Ent_Str_Size are maximum
	values which are constants.

2012-04-10  Norbert Preining  <preining@logic.at>
