@@ -33,10 +33,10 @@ echo "*** xdvipdfmx -v -o image2.pdf image" && echo \
 	&& echo && echo "xdvipdfmx-image tests OK" && echo \
 	|| failed="$failed xdvipdfmx-image"	
 
-echo "*** dvipdfmx -v -o xbmc2.pdf xbmc" && echo \
-	&& ./dvipdfmx -v -o xbmc2.pdf  $srcdir/tests/xbmc \
-	&& echo && echo "dvipdfmx-xbmc tests OK" && echo \
-	|| failed="$failed dvipdfmx-xbmc"
+echo "*** xdvipdfmx -v -o xbmc2.pdf xbmc" && echo \
+	&& ./xdvipdfmx -v -o xbmc2.pdf  $srcdir/tests/xbmc \
+	&& echo && echo "xdvipdfmx-xbmc tests OK" && echo \
+	|| failed="$failed xdvipdfmx-xbmc"
 
 test -z "$failed" && exit 0
 echo
